# GASM-or

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
benchmark/: accuracy_quality.py  common.py  speed.py
benchmark/tests/: conftest.py  test_gpu.py  test_matching.py
doc/source/: api.rst  conf.py  developer.rst  index.rst  installation.rst  quickstart.rst  user_guide.rst
gasm/: __init__.py  api.py  attributes.py  convergence.py  graph.py  matching.py  metrics.py  utils.py
gasm/cpu/: __init__.py  core.py
gasm/gpu/: __init__.py  core.py
gasm/gpu/kernels/: gasm.cl
gasm/lap/: __init__.py  auction.py  jv.py
